<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">



    <TextView
            android:text="@string/incomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IncomeText"
            android:layout_marginTop="@dimen/margin" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/margin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" android:textAlignment="center"
    />

    <TextView
            android:text="@string/timeToWrkInPr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeToWrkInPr"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="@string/payOutAftrTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payOutBfrTax"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/timeToWrkInPr"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"/>
    <TextView
            android:text="@string/yourIncomeWCSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            android:layout_marginStart="212dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="606dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/userInputPayForWork" android:layout_marginTop="128dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/userInputPayForWork" android:hint="@string/userInputPayForWork"
            style=" "/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/userInputWorkTime"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/userInputWorkTime" android:hint="@string/userInputWorkTime"
    />
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/userInputPayForWork"
    />
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userInputWorkTime"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText6"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4"/>



</android.support.constraint.ConstraintLayout>